--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ body {
   font-size: 100%;
   line-height: 175%;
   margin: 0 15% 0;
-  background-color: green;
-  background-image: url(images/purpledot.png);
+//background-color: green;
+  background-image: url(bullseye.png);
 }
 #header {
   margin-top: 0;
