--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
   font-size: 100%;
   line-height: 175%;
   margin: 0 15% 0;
-//background-color: green;
+background-color: green;
   background-image: url(purpledot.png);
 }
 #header {
