--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   line-height: 175%;
   margin: 0 15% 0;
 background-color: green;
-  background-image: url(purpledot.png);
+  background-image: url(bullseye.png);
 }
 #header {
   margin-top: 0;
