--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ body {
   font-family: Georgia, serif;
   font-size: 100%;
   line-height: 175%;
-  margin: 0 15% 0;
-background-color: green;
+  margin: 0 15% 0; 
+background-color: light green;
   background-image: url(bullseye.png);
 }
 #header {
