--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html >
 <html>
-
 <head>
 <meta charset="utf-8">
 <title>Black Goose Bistro Summer Menu</title>
@@ -11,7 +10,7 @@ body {
   font-size: 100%;
   line-height: 175%;
   margin: 0 15% 0; 
-background-color: light green;
+background-color: #D2DC9D;
   background-image: url(bullseye.png);
 }
 #header {
